Enqueue stock updates and enable Sidekiq
Start UpdateStockPricesJob from StocksController#index to refresh prices asynchronously and configure ActiveJob to use Sidekiq as the queue adapter. Improve UpdateStockPricesJob: remove Sidekiq::Job include, add per-stock begin/rescue with clearer logging, and keep queue name :stock_updates. Update StockDataService#top_movers to query recent stocks from the DB, validate price and percent fields, sort by percent change and return the top 10 movers. Small view tweak to display the number of stocks and minor cleanup of ApplicationJob/config formatting.

--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Market Stocks</h1>
+<h1>Market Stocks <%= @stocks.length %></h1>
 
 <div data-controller="stocks"
      data-stocks-url-value="<%= stocks_path(format: :json) %>"
