--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,53 +1,17 @@
-<h1>Dashboard</h1>
-<p>Welcome back , <%= Current.user&.username %></p>
-<p>Buying power: $<%= Current.user&.buying_power %></p>
+<div class="space-y-6">
+  <%= render "shared/user_header" %>
 
-<%= button_to "logout", logout_path, method: :delete %>
+  <%= render "portfolio_chart" %>
+
+  <div class="grid gird-cols-1 md:grid-cols-2 gap-6">
+    <%= render "portfolio" %>
+    <%= render "watchlist" %>
+  </div>
+
+</div>
 
 
-<h2>Portfolio History</h2>
 
-<%= render partial: "dashboard/portfolio_chart", locals: { portfolio_history: @portfolio_history } %>
 
-<%= turbo_frame_tag "portfolio_value" do %>
-  <h2>Portfolio</h2>
-  <ul>
-    <% @holdings.each do |h| %>
-      <li>
-        <%= h.stock.symbol %> - <%= h.shares %> shares
 
-        <%# Sell form %>
-        <%= form_with url: sell_trades_path, method: :post, data: { turbo_frame: "portfolio_value" }, local: true do |f| %>
-          <%= hidden_field_tag :symbol, h.stock.symbol %>
-          <%= number_field_tag :shares, 1, min: 1, max: h.shares %>
-          <%= submit_tag "Sell" %>
-        <% end %>
-      </li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= turbo_frame_tag "top_movers" do %>
-  <h2>Top Movers</h2>
-  <ul>
-    <% @top_movers.each do |symbol| %>
-      <li><%= symbol %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<h2>Watchlist</h2>
-<ul id="watchlist">
-  <% Current.user.watchlist_items.each do |item| %>
-    <li id="watchlist-item-<%= item.id %>">
-      <%= item.stock.symbol %> - $<%= item.stock.current_price %>
-
-      <%= button_to "Remove",
-                    watchlist_path(item.id),
-                    method: :delete,
-                    data: { turbo_stream: true },
-                    form_class: "inline" %>
-    </li>
-  <% end %>
-</ul>
 
