--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,15 @@
 </head>
 
 <body>
-<main>
-  <div id="flash">
-    <%= render "layouts/flash" %>
-  </div>
+<div id="flash">
+  <%= render "shared/flash" %>
+</div>
+<header>
+  <%= render "shared/stocks/top_movers", top_movers: @top_movers %>
+  <%= render "shared/nav_menu/navbar" unless Current.user.nil? %>
+</header>
+<main class="w-full mx-auto p-6">
+
   <%= yield %>
 </main>
 </body>
