--- a/app/views/shared/nav_menu/_nav_menu.html.erb
+++ b/app/views/shared/nav_menu/_nav_menu.html.erb
@@ -6,6 +6,9 @@
     <%= nav_link "Stocks", stocks_path %>
   </li>
   <li>
+    <%= nav_link "News", news_path %>
+  </li>
+  <li>
     <%= nav_link "Account", "#" %>
   </li>
   <li>
