--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   <%= render "shared/stocks/top_movers", top_movers: @top_movers %>
   <%= render "shared/nav_menu/navbar" unless Current.user.nil? %>
 </header>
-<main class="w-full mx-auto p-6">
+<main class="px-4 sm:px-6 lg:px-8 py-10 mx-auto">
 
   <%= yield %>
 </main>
