--- a/app/views/stocks/_stock_chart.html.erb
+++ b/app/views/stocks/_stock_chart.html.erb
@@ -1,14 +1,22 @@
-<div data-controller="chart"
-     data-chart-url-value="<%= history_stock_path(@stock) %>"
-     data-chart-interval-value="5000">
+<div class="bg-surface rounded-xl p-6 border border-white/5 shadow-2xl">
 
-  <div data-chart-target="chart" id="live-price-chart">
-    <%= line_chart history_stock_path(@stock),
-                   refresh: 5,
-                   xtitle: "Time",
-                   ytitle: "Price (USD)",
-                   prefix: "$"
-    %>
+  <div data-controller="chart"
+       data-chart-url-value="<%= history_stock_path(@stock) %>"
+       data-chart-interval-value="5000">
+
+    <div data-chart-target="chart" id="live-price-chart">
+
+
+      <%= render "shared/chart",
+                 chart_type: :line_chart,
+                 url: history_stock_path(@stock, format: :json),
+                 color: "#22c55e",
+                 bg_color: "#111318",
+                 prefix: "$",
+                 thousands: ",",
+                 refresh: 5,
+                 fill: true %>
+    </div>
+
   </div>
-
 </div>
