--- a/app/views/shared/_user_header.html.erb
+++ b/app/views/shared/_user_header.html.erb
@@ -6,9 +6,6 @@
   </div>
 
 
-  <div class="text-right">
-    <p class="text-[11px] font-semibold tracking-widest text-white/40 uppercase">Buying Power</p>
-    <p class="text-emerald-400 font-bold text-lg"><%= number_to_currency(Current.user.buying_power) %></p>
-  </div>
+  <%= render "shared/buying_power" %>
 
 </div>
