Introduce dashboard layout and adjust navigation/UX
Add a new dashboard layout and switch layouts based on Current.user in ApplicationController (set_layout). Move allow_browser and stale_when_importmap_changes calls and set layout selection. Create app/views/layouts/dashboard.html.erb that includes the top movers and navbar for authenticated users; simplify the default application layout. Render TopMovers without a layout and tweak the top movers partial (smaller text and minor markup). Disable Turbo for certain interactions: holding stock links and the trade form (data-turbo="false"). Update SessionsController to redirect to root_path after login. Remove the unused "Account" nav item and make small cleanup in top_movers view iteration.

--- a/app/views/dashboard/_holding_row.html.erb
+++ b/app/views/dashboard/_holding_row.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="min-w-0">
       <p class="text-white font-semibold text-sm hover:underline ">
-        <%= link_to holding.stock.symbol, stock_path(holding.stock.id) %>
+        <%= link_to holding.stock.symbol, stock_path(holding.stock.id), data: { turbo: false } %>
       </p>
       <p class="text-white/40 text-xs"><%= holding.shares %> shares</p>
     </div>
