--- a/app/views/shared/stocks/_top_movers.html.erb
+++ b/app/views/shared/stocks/_top_movers.html.erb
@@ -2,7 +2,7 @@
                     src: top_movers_path,
                     loading: :lazy do %>
 
-  <div class="bg-zinc-950 border-y border-zinc-800 py-3 text-center text-zinc-500">
+  <div class="bg-zinc-950 border-y border-zinc-800 py-3 text-sm text-center text-zinc-500">
     Loading market movers...
   </div>
 
