--- a/app/views/stocks/_stock_data.html.erb
+++ b/app/views/stocks/_stock_data.html.erb
@@ -37,7 +37,7 @@
                    card_class: "",
                    content_class: "p-4 flex justify-center" do %>
 
-          <%= form_with url: trades_path, class: "flex items-center gap-4" do %>
+          <%= form_with url: trades_path, data: { turbo: false }, class: "flex items-center gap-4" do %>
             <%= hidden_field_tag :symbol, @stock.symbol %>
 
             <%= number_field_tag :shares, 1, min: 1,
