--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,15 +23,12 @@
 </head>
 
 <body>
+
 <div id="flash">
   <%= render "shared/flash" %>
 </div>
-<header>
-  <%= render "shared/stocks/top_movers" %>
-  <%= render "shared/nav_menu/navbar" unless Current.user.nil? %>
-</header>
-<main class="px-4 sm:px-6 lg:px-8 py-10 mx-auto">
 
+<main>
   <%= yield %>
 </main>
 </body>
