Add flash to layout and set page titles
Render the shared flash partial in the dashboard layout so flash messages are displayed site-wide. Add content_for :title to market_news#index, stocks#index, and stocks#show (show uses the dynamic @stock.symbol) to set page titles like "TRIVIO | ..." for improved SEO and UX.

--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+<div id="flash">
+  <%= render "shared/flash" %>
+</div>
 <header>
   <%= render partial: "shared/stocks/top_movers" %>
   <%= render "shared/nav_menu/navbar" %>
