--- a/app/views/market_news/index.html.erb
+++ b/app/views/market_news/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title, "TRIVIO | Market News" %>
+
+
 <h1 class="text-3xl md:text-4xl font-syne font-bold text-font mb-10">
   Market News
 </h1>
