--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title, "TRIVIO | #{@stock.symbol}" %>
+
+
 <div class="mb-8 space-y-2">
   <h1 class="text-3xl font-bold text-primary">
     <%= @stock.name %>
